# tcd

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  LICENSE  README.md  README_SEGMENTATION.md  ZOO.md  asset-manifest.json  cloudbuild.yaml  conf.yaml  conf_sweep.yaml  config.py  data.py  default.yaml  default_tta.yaml  demo.py  demo_predict_large.py  environment.yml  evaluate.py  generalStatistics.py  general_statistics.py  generate_masks.sh  index.html  instance_segmentation.py  launch.py  masking.py  mkdocs.yml  model.py  modelrunner.py  objects.inv  package-lock.json  package.json  post_processing.py  precache-manifest.520623023e7d53a912bca923c41fc9dc.js  predict.py  prediction_demo.ipynb  (+13 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: docker.yml  python-test.yml
architecture/: index.html
assets/javascripts/: bundle.a7c05c9e.min.js
benchmark/: index.html
benchmarks/swisstopo/: zurich.geojson  zurich_2022_images.csv
cache/: index.html
citing/: index.html
clustering/: index.html
config/: base.yaml  base_detectron.yaml  base_semantic_segmentation.yaml  detectron_mask_rcnn.yaml  detectron_mask_rcnn_tta.yaml  detectron_tta.yaml  index.html  test_instance_segmentation.yaml  test_semantic_segmentation.yaml  torchgeo_semantic_segmentation.yaml  train_detectron_maxar.yaml  train_kfold0_detectron.yaml  train_kfold0_semantic.yaml  train_kfold1_detectron.yaml  train_kfold1_semantic.yaml  train_kfold2_detectron.yaml  train_kfold2_semantic.yaml  train_kfold3_detectron.yaml  train_kfold3_semantic.yaml  train_kfold4_detectron.yaml
config/detectron2/: detectron_mask_rcnn.yaml  detectron_mask_rcnn_512.yaml  detectron_mask_rcnn_kfold_t4.yaml  detectron_mask_rcnn_test.yaml  detectron_mask_rcnn_tta.yaml
config/torchgeo/: conf_sweep.yaml  train_test_run.yaml  unet_resnet34.yaml  unet_resnet50.yaml  unetplusplus_resnet50.yaml
data/: 5c15321f63d9810007f8b06f_10_00000.tif  5c15321f63d9810007f8b06f_10_00000_crop.tif  collect_dataset.py
dataset/: index.html
docker/: Dockerfile  Dockerfile_arm  README.md  build.sh  environment.yaml
docs/: architecture.md  benchmark.md  cache.md  citing.md  config.md  dataset.md  index.md  install.md  introduction.md  model.md  prediction.md  reference.md  training.md
docs/stylesheets/: extra.css
examples/: demo.py  demo_predict_large.py  gradio_segmentation.py  load_test_image.py  process_serialised.py  screen_predict.py  screen_predict_objects.py  sweep_semantic_segmentation.py  train.py  train_maskrcnn.py
install/: index.html
introduction/: index.html
model/: index.html
notebooks/: Evaluate KFolds.ipynb  demo.ipynb  demo_semantic_segmentation.ipynb  prediction_demo.ipynb  tiling.ipynb  vanilla_model_checkpoint_test.ipynb
prediction/: index.html
public/: index.html  site.css
reference/: index.html
reference/SUMMARY/: index.html
reference/tcd_pipeline/: index.html
reference/tcd_pipeline/cache/: index.html
reference/tcd_pipeline/data/: index.html
reference/tcd_pipeline/models/: index.html
reference/tcd_pipeline/pipeline/: index.html
reference/tcd_pipeline/postprocess/: index.html
reference/tcd_pipeline/report/: index.html
reference/tcd_pipeline/result/: index.html
reference/tcd_pipeline/scripts/: index.html
reference/tcd_pipeline/util/: index.html
src/: clean_data.py  default.yaml  demo.py  index.js  masking.py  model.py  train.py  vanilla_model.py
src/tcd_pipeline/: __init__.py  config.py  data.py  downsample.py  general_statistics.py  instance.py  instance_segmentation.py  model.py  modelrunner.py  pipeline.py  post_processing.py  process_serialised.py  report.py  result.py  semantic_segmentation.py  util.py
src/tcd_pipeline/cache/: __init__.py  cache.py  instance.py  instancecache.py  semantic.py  semanticcache.py
src/tcd_pipeline/config/: config.yaml  instance.yaml  semantic.yaml
src/tcd_pipeline/data/: cocodataset.py  datamodule.py  dataset.py  imagedataset.py  restor_oam_tcd.py  tiling.py
src/tcd_pipeline/models/: index_to_name_binary.json  model.py  (+9 more)
static/css/: 2.945747aa.chunk.css  2.945747aa.chunk.css.map
static/js/: 2.f40b3ff7.chunk.js  2.f40b3ff7.chunk.js.LICENSE.txt  main.44d5a5e5.chunk.js  main.44d5a5e5.chunk.js.map  runtime-main.643607e0.js  runtime-main.643607e0.js.map
templates/: canopy_coverage.html  segmentation_report.html
test/: test_inference.py
tests/: test_20221010_single.json  test_data.py  test_instance_segmentation.py  test_modelrunner.py  test_post_processing.py  test_reproject.py  test_segmentation.py  test_semantic_segmentation.py
tests/images/: 5b3622402b6a08001185f8d8_10_00004.tif
tests/integration/: test_datasets.py  test_evaluate_models.py  test_scripts.py  test_train_models.py
tests/unit/: 5c15321f63d9810007f8b06f_10_00000.json  test_cache.py  test_data.py  test_datamodule.py  test_hf_hub.py  test_hf_hub_models.py  test_instance_segmentation.py  test_modelrunner.py  test_oam_tcd_dataset.py  test_pipeline.py  test_post_processing.py  test_reproject.py  test_semantic_segmentation.py  test_tiling.py  util.py
tools/: CONVERT.md  batch_convert.py  clean_data.py  convert_torchscript.py  create_ortho.py  fixup_checkpoint.py  generate_dataset.py  make_masks.py  masking.py  predict_report.py  resize_image.py  screen_predict.py  server.py  test_server.py  train_fastai_unet.py  train_pytorch_maskrcnn.py  train_segformer.py
training/: index.html
utils/: clean_data.py  downsample.py
(+99 files in other folders)
