[project]
name = "tcd_pipeline"
description = "Restor Tree Crown Delineation Pipeline"
version = "0.1.0"
authors = [
    { name = "Josh Veitch-Michaelis", email = "josh@restor.eco" }
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage-badge"
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings-python",
    "mkdocs-literate-nav",
    "mkdocs-gen-files"
]

[project.scripts]
tcd-predict = "tcd_pipeline.scripts.predict:main"
tcd-train = "tcd_pipeline.scripts.train:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["config"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
py-version = "3.10"
jobs = 2
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.typing"]
disable = ["line-too-long"]

[tool.pytest.ini_options]
addopts = [
    "-x",
    "--junitxml=reports/junit/junit.xml",
    "--cov=tcd_pipeline",
    "--color=yes",
    "--verbose",
    "--durations=0"
]
testpaths = [
    "tests/unit",
    "tests/integration",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]