[project]
name = "tcd_pipeline"
description = "Restor Tree Crown Delineation Pipeline"
version = "0.1.0"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Josh Veitch-Michaelis", email = "josh@restor.eco" }
]
dependencies = [
    "albumentations>=2.0.6",
    "datasets>=3.6.0",
    "detectron2",
    "dotmap>=1.3.30",
    "fiona>=1.10.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.31.1",
    "hydra-core>=1.3.2",
    "jsonlines>=4.0.0",
    "jupyter>=1.1.1",
    "lightning>=2",
    "matplotlib>=3.10.1",
    "mss>=10.0.0",
    "natsort>=8.4.0",
    "nb-clean>=4.0.1",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pycocotools>=2.0.8",
    "pyshp>=2.3.1",
    "python-dotenv>=1.1.0",
    "python-liquid>=2.0.1",
    "rasterio>=1.4.3",
    "rtree>=1.4.0",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "shapely>=2.1.0",
    "torch>=2.7.0",
    "torchmetrics>=0.11",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "ttach>=0.0.3",
    "wandb>=0.19.11",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
test = [
    "black>=25.1.0",
    "coverage-badge>=1.1.2",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-console-scripts==1.4.1",
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-autorefs>=1.4.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.12",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings-python>=1.16.10",
]

[project.scripts]
tcd-predict = "tcd_pipeline.scripts.predict:main"
tcd-train = "tcd_pipeline.scripts.train:main"
tcd-merge = "tcd_pipeline.scripts.merge:main"
tcd-cluster = "tcd_pipeline.scripts.cluster:main"
tcd-extract = "tcd_pipeline.scripts.extract:main"
tcd-reproject = "tcd_pipeline.scripts.reproject:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["config"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
py-version = "3.12"
jobs = 2
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.typing"]
disable = ["line-too-long"]

[tool.pytest.ini_options]
addopts = [
    "-x",
    "--junitxml=reports/junit/junit.xml",
    "--cov=tcd_pipeline",
    "--color=yes",
    "--verbose",
    "--durations=0"
]
testpaths = [
    "tests/unit",
    "tests/integration",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
